feat: ajout d'un écran de démarrage et d'un gestionnaire de mises à jour